--- a/html/about.html
+++ b/html/about.html
@@ -33,6 +33,14 @@
 					</ul>
 				</div>
 			</nav>
+			<div class="ham-nav">
+				<a href="index.html">Home</a>
+				<a href="about.html">About</a>
+				<a href="about.html#services">Services</a>
+				<a href="careers.html">Careers</a>
+				<a href="contact.html">Contact</a>
+			</div>
+				
 			<h1>About Us</h1>
 		</div>
 	</header>
