--- a/html/index.html
+++ b/html/index.html
@@ -33,6 +33,13 @@
 					</ul>
 				</div>
 			</nav>
+			<div class="ham-nav">
+				<a href="index.html">Home</a>
+				<a href="about.html">About</a>
+				<a href="about.html#services">Services</a>
+				<a href="careers.html">Careers</a>
+				<a href="contact.html">Contact</a>
+			</div>
 			
 			<div class="phrase">
 				<p>It all starts at the foundation.</p>
