--- a/html/careers.html
+++ b/html/careers.html
@@ -48,11 +48,11 @@
 	<section class="form">
 	<h2>We're Hiring</h2>
 
-		<form action="" method="" id="form">
+		<form action="https://formspree.io/seth.pabst@gmail.com" method="POST" id="form">
 			<h3>General Information</h3>
 			<div class="row row-1">
-				<input type="text" name="First" placeholder="First Name">
-				<input type="text" name="Last" placeholder="Last Name">
+				<input type="text" name="FirstName" placeholder="First Name">
+				<input type="text" name="LastName" placeholder="Last Name">
 				<input type="text" name="SSN" placeholder="SSN">
 			</div>
 
@@ -79,7 +79,7 @@
 				<div class="radio">
 					<input type="radio" name="ageYears" value="Yes" id="ageYearsYes">
 					<label for="ageYearsYes">Yes</label>
-					<input type="radio" name="ageYears" value="No" required="" id="ageYearsNo">
+					<input type="radio" name="ageYears" value="No" required id="ageYearsNo">
 					<label for="ageYearsNo">No</label>
 				</div>
 			</div>
@@ -95,9 +95,9 @@
 				<div class="col">
 					<label>Are you legally authorized to work in the U.S?</label>
 					<div class="radio">
-						<input type="radio" name="legally" value="Yes" id="legally-yes">
+						<input type="radio" name="legal-worker" value="Yes" id="legally-yes">
 						<label for="legally-yes">Yes</label>
-						<input type="radio" name="legally" value="No" required="" id="legally-no">
+						<input type="radio" name="legal-worker" value="No" required id="legally-no">
 						<label for="legally-no">No</label>
 					</div>
 				</div>
@@ -107,7 +107,7 @@
 					<div class="radio">
 						<input type="radio" name="drug-test" value="Yes" id="drug-yes">
 						<label for="drug-yes">Yes</label>
-						<input type="radio" name="drug-test" value="No" required="" id="drug-no">
+						<input type="radio" name="drug-test" value="No" required id="drug-no">
 						<label for="drug-no">No</label>
 					</div>
 				</div>
@@ -117,9 +117,9 @@
 				<div class="col">
 					<label>Have you ever been convicted of a crime? If yes, please explain.</label>
 					<div class="radio">
-						<input type="radio" name="crime-answer" value="Yes" id="crime-yes">
+						<input type="radio" name="convicted-of-crime" value="Yes" id="crime-yes">
 						<label for="crime-yes" id="crime-yes">Yes</label>
-						<input type="radio" name="crime-answer" value="No" required="" id="crime-no">
+						<input type="radio" name="convicted-of-crime" value="No" required id="crime-no">
 						<label for="crime-no">No</label>
 						<textarea name="crime-info" cols="70" rows="4" class="crime-textarea"></textarea>
 					</div>
@@ -128,11 +128,11 @@
 				<div class="col">
 					<label class="">How did you hear about this job?</label>
 					<div class="radio">
-						<input type="radio" name="friend" value="friend" id="friend">
+						<input type="radio" name="heard-about-job" value="friend" id="friend">
 						<label for="friend">friend</label>
-						<input type="radio" name="friend" value="online" id="online">
+						<input type="radio" name="heard-about-job" value="online" id="online">
 						<label for="friend">online</label>
-						<input type="radio" name="friend" value="other" id="other">
+						<input type="radio" name="heard-about-job" value="other" id="other">
 						<label for="other">other</label>
 					</div>
 				</div>
@@ -261,27 +261,13 @@
 					<tbody>
 						<tr>
 							<td>
-								<input type="text" id="refName1" name="refName1" placeholder="John Doe" required="">
+								<input type="text" id="refName1" name="refName1" placeholder="John Doe">
 							</td>
 							<td>
-								<input type="text" id="refRel1" name="refRel1" placeholder="Relationship" required="">
+								<input type="text" id="refRel1" name="refRel1" placeholder="Relationship">
 							</td>
 							<td>
-								<input type="text" id="refComp1" name="refComp1" placeholder="Company Name" required="">
-							</td>
-							<td>
-								<input type="text" id="refPhone1" name="refPhone1" placeholder="Phone #">
-							</td>
-						</tr>
-						<tr>
-							<td>
-								<input type="text" id="refName1" name="refName1" placeholder="John Doe" required="">
-							</td>
-							<td>
-								<input type="text" id="refRel1" name="refRel1" placeholder="Relationship" required="">
-							</td>
-							<td>
-								<input type="text" id="refComp1" name="refComp1" placeholder="Company Name" required="">
+								<input type="text" id="refComp1" name="refComp1" placeholder="Company Name">
 							</td>
 							<td>
 								<input type="text" id="refPhone1" name="refPhone1" placeholder="Phone #">
@@ -289,30 +275,44 @@
 						</tr>
 						<tr>
 							<td>
-								<input type="text" id="refName1" name="refName1" placeholder="John Doe" required="">
+								<input type="text" id="refName1" name="refName2" placeholder="John Doe">
 							</td>
 							<td>
-								<input type="text" id="refRel1" name="refRel1" placeholder="Relationship" required="">
+								<input type="text" id="refRel1" name="refRel2" placeholder="Relationship">
 							</td>
 							<td>
-								<input type="text" id="refComp1" name="refComp1" placeholder="Company Name" required="">
+								<input type="text" id="refComp1" name="refComp2" placeholder="Company Name">
 							</td>
 							<td>
-								<input type="text" id="refPhone1" name="refPhone1" placeholder="Phone #">
+								<input type="text" id="refPhone1" name="refPhone2" placeholder="Phone #">
 							</td>
 						</tr>
 						<tr>
 							<td>
-								<input type="text" id="refName1" name="refName1" placeholder="John Doe" required="">
+								<input type="text" id="refName1" name="refName3" placeholder="John Doe">
 							</td>
 							<td>
-								<input type="text" id="refRel1" name="refRel1" placeholder="Relationship" required="">
+								<input type="text" id="refRel1" name="refRel3" placeholder="Relationship">
 							</td>
 							<td>
-								<input type="text" id="refComp1" name="refComp1" placeholder="Company Name" required="">
+								<input type="text" id="refComp1" name="refComp3" placeholder="Company Name">
 							</td>
 							<td>
-								<input type="text" id="refPhone1" name="refPhone1" placeholder="Phone #">
+								<input type="text" id="refPhone1" name="refPhone3" placeholder="Phone #">
+							</td>
+						</tr>
+						<tr>
+							<td>
+								<input type="text" id="refName1" name="refName4" placeholder="John Doe">
+							</td>
+							<td>
+								<input type="text" id="refRel1" name="refRel4" placeholder="Relationship">
+							</td>
+							<td>
+								<input type="text" id="refComp1" name="refComp4" placeholder="Company Name">
+							</td>
+							<td>
+								<input type="text" id="refPhone1" name="refPhone4" placeholder="Phone #">
 							</td>
 						</tr>
 					</tbody>
