changed script href

--- a/about.html
+++ b/about.html
@@ -147,6 +147,6 @@
 		
 		<div class="copyright"><span>&copy; 2019 - Kane Concrete & Construction | ALL RIGHTS RESERVED</span></div>
 	</section>
-	<script src="../script.js"></script>
+	<script src="script.js"></script>
 </body>
 </html>
