--- a/careers.html
+++ b/careers.html
@@ -77,9 +77,9 @@
 			<div class="row row-5">
 				<label>Are you 18 years old or older?</label>
 				<div class="radio">
-					<input type="radio" name="ageYears" value="Yes" id="ageYearsYes">
+					<input type="radio" name="18-or-older" value="Yes" id="ageYearsYes">
 					<label for="ageYearsYes">Yes</label>
-					<input type="radio" name="ageYears" value="No" required id="ageYearsNo">
+					<input type="radio" name="18-or-older" value="No" required id="ageYearsNo">
 					<label for="ageYearsNo">No</label>
 				</div>
 			</div>
@@ -105,9 +105,9 @@
 				<div class="col">
 					<label>Are you willing to submit to a drug test?</label>
 					<div class="radio">
-						<input type="radio" name="drug-test" value="Yes" id="drug-yes">
+						<input type="radio" name="willing-to-drug-test" value="Yes" id="drug-yes">
 						<label for="drug-yes">Yes</label>
-						<input type="radio" name="drug-test" value="No" required id="drug-no">
+						<input type="radio" name="willing-to-drug-test" value="No" required id="drug-no">
 						<label for="drug-no">No</label>
 					</div>
 				</div>
@@ -365,6 +365,6 @@
 		
 		<div class="copyright"><span>&copy; 2019 - Kane Concrete & Construction | ALL RIGHTS RESERVED</span></div>
 	</section>
-	<script src="../script.js"></script>
+	<script src="script.js"></script>
 </body>
 </html>
