--- a/careers.html
+++ b/careers.html
@@ -346,8 +346,8 @@
 					<i class="fab fa-facebook"><a href="#" class="social-net"></a></i>
 					<i class="fab fa-twitter-square"><a href="#" class="social-net"></a></i>
 
-					<button name="msg">Send</button>
-					<textarea name="msg" class="footer-textarea" cols="45" rows="5" placeholder="Send us some feedback..."></textarea>
+					<button name="msg" type="submit">Send</button>
+					<form action="https://formspree.io/seth.pabst@gmail.com" method="POST" id="form"><textarea name="msg" class="footer-textarea" cols="45" rows="5" placeholder="Send us some feedback..."></textarea></form>
 				</div>
 			</div>
 
