changed footer textarea

--- a/about.html
+++ b/about.html
@@ -128,8 +128,10 @@
 					<i class="fab fa-facebook"><a href="#" class="social-net"></a></i>
 					<i class="fab fa-twitter-square"><a href="#" class="social-net"></a></i>
 
-					<button name="msg" type="submit">Send</button>
-					<form action="https://formspree.io/seth.pabst@gmail.com" method="POST" id="form"><textarea name="msg" class="footer-textarea" cols="45" rows="5" placeholder="Send is some feedback..."></textarea></form>
+					<form action="https://formspree.io/seth.pabst@gmail.com" method="POST" id="form">
+						<button name="msg" type="submit">Send</button>
+						<textarea name="msg" class="footer-textarea" cols="45" rows="5" placeholder="Send is some feedback..."></textarea>
+					</form>
 				</div>
 			</div>
 
