--- a/careers.html
+++ b/careers.html
@@ -48,7 +48,7 @@
 	<section class="form">
 	<h2>We're Hiring</h2>
 
-		<form action="https://formspree.io/seth.pabst@gmail.com" method="POST" id="form">
+		<form action="https://formspree.io/seth.pabst@gmail.com" method="POST" id="application-form">
 			<h3>General Information</h3>
 			<div class="row row-1">
 				<input type="text" name="FirstName" placeholder="First Name">
@@ -346,8 +346,10 @@
 					<i class="fab fa-facebook"><a href="#" class="social-net"></a></i>
 					<i class="fab fa-twitter-square"><a href="#" class="social-net"></a></i>
 
-					<button name="msg" type="submit">Send</button>
-					<form action="https://formspree.io/seth.pabst@gmail.com" method="POST" id="form"><textarea name="msg" class="footer-textarea" cols="45" rows="5" placeholder="Send us some feedback..."></textarea></form>
+					<form action="https://formspree.io/seth.pabst@gmail.com" method="POST" id="form">
+						<button name="msg" type="submit">Send</button>
+						<textarea name="msg" class="footer-textarea" cols="45" rows="5" placeholder="Send us some feedback..."></textarea>
+					</form>
 				</div>
 			</div>
 
