changed quote button

--- a/careers.html
+++ b/careers.html
@@ -57,7 +57,7 @@
 			</div>
 
 			<div class="row row-2">
-				<input type="text" name="Email" placeholder="Email">
+				<input type="email" name="Email" placeholder="Email">
 				<input type="text" name="Address" placeholder="Address">
 			</div>
 			
