--- a/contact.html
+++ b/contact.html
@@ -50,17 +50,17 @@
 
 		<div class="container">
 			<div class="quote-info">
-				<form action="">
+				<form action="https://formspree.io/seth.pabst@gmail.com" method="POST">
 					<p>Get a Quote</p>
 
 					<input type="text" placeholder="First Name">
 					<input type="text" placeholder="Last Name">
 					<input type="text" placeholder="Phone Number">
-					<input type="text" placeholder="Email">
+					<input type="email" placeholder="Email">
 
 					<textarea name="project-details" id="" cols="40" rows="7" placeholder="Give us the specifics on your project"></textarea>
 
-					<button class="send-quote">Send</button>
+					<button class="send-quote" type="submit">Send</button>
 				</form>
 			</div>
 
