--- a/contact.html
+++ b/contact.html
@@ -53,10 +53,10 @@
 				<form action="https://formspree.io/seth.pabst@gmail.com" method="POST">
 					<p>Get a Quote</p>
 
-					<input type="text" placeholder="First Name">
-					<input type="text" placeholder="Last Name">
-					<input type="text" placeholder="Phone Number">
-					<input type="email" placeholder="Email">
+					<input name="first" type="text" placeholder="First Name">
+					<input name="last" type="text" placeholder="Last Name">
+					<input name="phone#" type="text" placeholder="Phone Number">
+					<input name="email" type="email" placeholder="Email">
 
 					<textarea name="project-details" id="" cols="40" rows="7" placeholder="Give us the specifics on your project"></textarea>
 
