--- a/careers.html
+++ b/careers.html
@@ -15,7 +15,7 @@
 		<div class="careers-wrapper">
 			<nav>
 				<div class="logo">
-					<i class="fab fa-accusoft"></i>
+					<img src="img/logo.jpg" class="logo" alt="logo">
 				</div>
 
 				<div class="nav">
