--- a/contact.html
+++ b/contact.html
@@ -15,7 +15,7 @@
 		<div class="contact-wrapper">
 			<nav>
 				<div class="logo">
-					<i class="fab fa-accusoft"></i>
+					<img src="img/logo.jpg" class="logo" alt="logo">
 				</div>
 
 				<div class="nav">
@@ -58,7 +58,7 @@
 					<input name="phone#" type="text" placeholder="Phone Number">
 					<input name="email" type="email" placeholder="Email">
 
-					<textarea name="project-details" id="" cols="40" rows="7" placeholder="Give us the specifics on your project"></textarea>
+					<textarea name="quote-project-details" id="" cols="40" rows="7" placeholder="Give us the specifics on your project"></textarea>
 
 					<button class="send-quote" type="submit">Send</button>
 				</form>
