--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 		<header>
 			<nav>
 				<div class="logo">
-					<i class="fab fa-accusoft"></i>
+					<img src="img/logo.jpg" class="logo" alt="logo">
 				</div>
 
 				<div class="nav">
@@ -121,3 +121,5 @@
 	<script src="script.js"></script>
 </body>
 </html>
+
+<!-- { "keys": [ "ctrl+alt+c" ], "command": "view_in_browser", "args": { "browser": "chrome" } } -->
