--- a/about.html
+++ b/about.html
@@ -3,7 +3,7 @@
 <head>
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<title>About | Kane Concrete & Construction</title>
+	<title>About | Kane Concrete & Construction LLC</title>
 	<link rel="stylesheet" href="about.css">
 	<link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.6.3/css/all.css" integrity="sha384-UHRtZLI+pbxtHCWp1t77Bi1L4ZtiqrqD80Kn4Z8NTSRyMA2Fd33n5dQ8lWUE00s/" crossorigin="anonymous">
 	<link href="https://fonts.googleapis.com/css?family=Arvo|Bitter|Lato|Montserrat|Noto+Sans|Open+Sans|Poppins|Roboto|Sarabun|Ubuntu" rel="stylesheet">
@@ -15,7 +15,7 @@
 		<div class="wrapper2">
 			<nav>
 				<div class="logo">
-					<i class="fab fa-accusoft"></i>
+					<img src="img/logo.jpg" class="logo" alt="logo">
 				</div>
 
 				<div class="nav">
